--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Quiz Template</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="qstyle.css" >
 </head>
 <body>
   <div class="quiz">
